--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -337,7 +337,7 @@
                                             @if (User.IsInRole("Consultant") || User.IsInRole("Project Manager") || User.IsInRole("Customer"))
                                             {
                                                 <li>
-                                                    <a href="@Url.Action("AssusmentMonitor", "ProjectMonitor")">
+                                                    <a href="@Url.Action("AssessmentMonitor", "ProjectMonitor")">
                                                         <i class="metismenu-icon pe-7s-diamond"></i>
                                                         Assessment Monitor
                                                     </a>
