--- a/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
@@ -271,10 +271,10 @@
 <script>
     //document.body.style.zoom = "67%";
     document.body.style.zoom = "70%";
-    $(document).ready(function () {
+    //$(document).ready(function () {
        
-        LoadTable(1);
-    });
+    //    LoadTable(1);
+    //});
     function LoadTable(Instance) {
         
         // $(document).ready(function () {
