--- a/ProAcc/Views/Home/Home.cshtml
+++ b/ProAcc/Views/Home/Home.cshtml
@@ -952,23 +952,26 @@
                 type: "POST",
                 data: { 'IDInstance': IDInstance },
                 success: function (result) {
-                    $.alert({
-                        title: 'Alert !',
-                        content: 'New Live Instance updated',// <br> with some <strong>HTML</strong> <em>contents</em>',
-                        icon: 'fa fa-rocket',
-                        animation: 'scale',
-                        closeAnimation: 'scale',
-                        buttons: {
-                            okay: {
-                                text: 'Okay',
-                                btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
-                                action: function (event, ui) {
-                                    $(this).remove();
-                                    location.reload();
-                                }
-                            }
-                        }
-                    });
+                    location.reload();
+                    Notiflix.Notify.Success('New Live Instance updated !', {cssAnimationStyle:'zoom', cssAnimationDuration:500,});
+                   
+                    //$.alert({
+                    //    title: 'Alert !',
+                    //    content: 'New Live Instance updated',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                    //    icon: 'fa fa-rocket',
+                    //    animation: 'scale',
+                    //    closeAnimation: 'scale',
+                    //    buttons: {
+                    //        okay: {
+                    //            text: 'Okay',
+                    //            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                    //            action: function (event, ui) {
+                    //                $(this).remove();
+                    //                location.reload();
+                    //            }
+                    //        }
+                    //    }
+                    //});
                 }
             });
         });
